# unity_native_particles

./: .gitignore  CMakeLists.txt  LICENSE  README.md
flexi_parts_unity_project/: .gitignore
flexi_parts_unity_project/Assets/Scenes/: main.unity
flexi_parts_unity_project/Assets/Scripts/: FlexiParts.cs  UnrealFPSController.cs
flexi_parts_unity_project/ProjectSettings/: ProjectSettings.asset
src/: flexi_parts.cpp  globals.h  memory_pool.cpp  memory_pool.h  particle_component.cpp  particle_component.h  particle_manager.cpp  particle_manager.h  renderer_opengl.cpp  renderer_opengl.h  shader.h  unity_native_particles.cpp
unity_project/Assets/Scenes/: main.unity
unity_project/Assets/Scripts/: UnityNativeParticles.cs
unity_project/ProjectSettings/: InputManager.asset  ProjectSettings.asset
